[package]
name = "github-actions-checker"
version = "0.1.0"
authors = ["Benjamin Lannon <benjamin@lannonbr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
hubcaps = { git = "https://github.com/softprops/hubcaps" } # using git latest as there hasn't been a version published to crates.io using Tokio 1.x
owo-colors = "2.0.0"
prettytable-rs = "0.8.0"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
